Fix code smells from Java code (#8867)